feat: redesign miniapp and add phone verification
